--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-image: url('./—Pngtree—summer\ atmosphere\ restaurant\ supermarket\ vegetable_1098004.jpg') ;
+    background-image: url('.Restaurant.jpg') ;
     color:white;
 
 }
